# deadbeef-librarybrowser

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.unix  README  README.md  autogen.sh  configure.ac  filebrowser.c  filebrowser.h  install.sh  makerelease.sh  quickinstall.sh  quickremove.sh  support.h  userinstall.sh  userremove.sh  utils.c  utils.h
